- items_control.txt now has ability to automatically get items from cart
  The new syntax is:
  (item name) (minimum in inventory) (autostore) (autosell) [put in cart] [get from cart]
  So to automatically keep 10 Meat in inventory from cart:
  Meat 10 0 0 0 1

New commands:
- guild join (flag)
  Accept or deny a guild join request.
- pl (number)
  Show detailed information about a player.

New config options:
- attackMaxDistance (number)
  You should set it to 2.5
- useSelf_skill, partySkill and useSelf_item now also support the 'monsters' option.
- New partySkill options:
  * target_aggressives
    Only activate partySkill if a certain monster attacks a party member.
  * target_isJob
  * target_isNotJob
    Only activate partySkill for certain job classes

- attackComboSlot {
     ...everything that attackSkillSlot supports is also supported here...
     afterSkill (skill name)
     waitBeforeUse (number of seconds)
  }
  Use a certain attack skill, after another attack skill was last used.

- avoidList_inLockOnly (flag)
  Set to 1, if you want to avoid people on your avoid list when they
  are on screen, but only when you are in lockMap.
- pkServer (flag)
  To to 1 if you're playing kRO or on a PK server.
- dcOnMute (flag)
  Disconnect when you have been muted by a GM.
- attackMinPlayerDistance (number)
  Only auto-attack monsters that are at least (number) blocks away from
  other players. (number) is at least 3; if you enter a lower value, Kore
  will treat it as 3.
- teleportAuto_atkMiss (number)
  Teleport if you've missed a monster more than (number) times in a row.
  This is useful if you're trying to attack a monster with the wrong
  elemental weapon, for example.

- route_teleport (flag)
  route_teleport_minDistance (number)
  route_teleport_maxTries (number)

  While walking to other maps, Kore will teleport until it's near a
  portal, if route_teleport is enabled. It will keep teleporting until